realize all application